@@ -33,6 +33,8 @@ ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=System partici
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
 
+ERROR_DESCRIPTION_TOO_LONG=Description can't be more than 255 characters long
+
 ToolAgentClassKey=Tool agent
 ApplicationNameKey=Application name
 ApplicationModeKey=Application mode
