@@ -26,6 +26,8 @@
 
 #Missing translation -> WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
 
+#Missing translation -> ERROR_DESCRIPTION_TOO_LONG=Description can't be more than 255 characters long
+
 #Missing translation -> ToolAgentClassKey=Tool agent
 #Missing translation -> ApplicationNameKey=Application name
 #Missing translation -> ApplicationModeKey=Application mode
